Tailwind CSS fixed, starting on mobile header, logo and nav bar starte, added pngs in place of svgs

--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -453,3 +453,36 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.flex {
+  display: flex;
+}
+.h-14 {
+  height: 3.5rem;
+}
+.h-1\/2 {
+  height: 50%;
+}
+.items-center {
+  align-items: center;
+}
+.border-2 {
+  border-width: 2px;
+}
+.border-slate-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(100 116 139 / var(--tw-border-opacity));
+}
+.p-1 {
+  padding: 0.25rem;
+}
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
